k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: agent-service
  labels:
    app: agent-service
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  selector:
    app: agent-service

---
apiVersion: v1
kind: Service
metadata:
  name: agent-service-external
  labels:
    app: agent-service
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  selector:
    app: agent-service
